# Suwayomi-Tauri

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: build_push.yml  publish.yml
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/icons/: icon.icns
desktop/tauri/src-tauri/src/: launcher.rs  main.rs
docs/: Configuring-Suwayomi‐Server.md
scripts/: build-tauri-bundle.sh  bundler.sh  prepare-tauri-resources.sh
scripts/resources/: Suwayomi Launcher.bat  Suwayomi Launcher.command  suwayomi-launcher.sh
scripts/resources/appimage/: AppRun
scripts/resources/deb/: install
scripts/resources/msi/: suwayomi-server-x64.wxs
scripts/resources/pkg/: suwayomi-launcher.desktop  suwayomi-launcher.sh
server/: build.gradle.kts
server/server-config/src/main/kotlin/suwayomi/tachidesk/graphql/types/: WebUITypes.kt
server/server-config/src/main/kotlin/suwayomi/tachidesk/server/: ServerConfig.kt
server/src/main/kotlin/suwayomi/tachidesk/server/util/: Browser.kt
server/src/test/kotlin/suwayomi/tachidesk/server/util/: BrowserTest.kt
