[package]
name = "suwayomi-launcher"
version = "0.1.0"
edition = "2021"
description = "Suwayomi Tauri launcher"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs = "6"
regex = "1"
ureq = { version = "2.12", default-features = false }
once_cell = "1"
thiserror = "2"
url = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "suwayomi-launcher"
path = "src/main.rs"
